--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "choma-vite",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -15,10 +15,10 @@
     "sass": "^1.63.4",
     "vite": "^4.3.9",
     "vite-plugin-handlebars": "^1.6.0",
-    "vite-plugin-zip-pack": "^1.0.5",
-    "vite-plugin-squoosh": "^1.1.7"
+    "vite-plugin-squoosh": "^1.1.7",
+    "vite-plugin-zip-pack": "^1.0.5"
   },
   "dependencies": {
-    "swiper": "^9.4.1"
+    "swiper": "^8.4.7"
   }
 }
